# kinect-sandbox

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
shaders/: simple.frag  simple.vert
support/: Cloud.cpp  Cloud.h  GLWindowUtils.cpp  GLWindowUtils.h  Kinect.cpp  Kinect.h  Settings.cpp  Settings.h  UtilsShader.cpp  UtilsShader.h
